--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(SimplexMotionDriver)
 
 set(CMAKE_CXX_STANDARD 14 CACHE STRING "C++ version selection")
 
-option(USE_HIDRAW "use low-level hidraw linux kernel" ON)
+option(USE_HIDRAW "use low-level hidraw linux kernel" OFF)
+option(USE_HIDAPI "use cross-platform hidapi library" ON)
 
 add_compile_options(
   -g -Wall -fPIC -std=c++14
@@ -24,10 +25,17 @@ include_directories(
 link_directories(
   )
 
-add_library(SimplexMotion SHARED
-  src/SimplexMotion.cpp
-  src/SimplexMotion-hidraw.cpp
-  )
+if(USE_HIDRAW)
+  set(SRCS src/SimplexMotion.cpp src/SimplexMotion-hidraw.cpp)
+endif()
+
+if(USE_HIDAPI)
+  set(SRCS src/SimplexMotion.cpp src/SimplexMotion-hidapi.cpp)
+endif()
+
+################################################################################
+  
+add_library(SimplexMotion SHARED ${SRCS} )
 
 target_link_libraries(SimplexMotion
   hidapi-hidraw
