--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,17 @@ link_directories(
   )
 
 if(USE_HIDRAW)
-  set(SRCS src/SimplexMotion.cpp src/SimplexMotion-hidraw.cpp)
+  set(SRCS
+    src/SimplexMotion.cpp
+    src/SimplexMotion-com.cpp
+    src/SimplexMotion-hidraw.cpp)
 endif()
 
 if(USE_HIDAPI)
-  set(SRCS src/SimplexMotion.cpp src/SimplexMotion-hidapi.cpp)
+  set(SRCS
+    src/SimplexMotion.cpp
+    src/SimplexMotion-com.cpp
+    src/SimplexMotion-hidapi.cpp)
 endif()
 
 ################################################################################
